Fix app icon ratio on smaller screens

--- a/components/AppIcon.module.css
+++ b/components/AppIcon.module.css
@@ -1,15 +1,18 @@
 .iconImage {
   filter: drop-shadow(0 0 1px rgba(255, 255, 255, 0.3));
   border-radius: 22%;
+  max-width: unset;
   width: 96px;
   height: 96px;
 }
 
 @media (prefers-color-scheme: light) {
-  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.75));
+  .iconImage {
+    filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.75));
+  }
 }
 
-@media (min-width: 320px) {
+@media (min-width: 480px) {
   .iconImage {
     width: 128px;
     height: 128px;
